--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -4,7 +4,7 @@ on: pull_request
 
 jobs:
   lint:
-    uses: ./.github/workflows/pr.yaml
+    uses: ./.github/workflows/lint.yaml
 
   test:
     needs: [lint]
